<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TextPostToevoegenFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textposttitel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titel"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textposttext"
                    android:layout_width="match_parent"
                    android:layout_height="174dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/tekst" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/text_post_toevoegen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />
        </LinearLayout>
    </FrameLayout>

</layout>
