<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".login">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/email"
                    app:layout_constraintBottom_toTopOf="@+id/password_field"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="dora.theexplorer1999@gmail.com"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"

                    android:hint="@string/password"
                    app:layout_constraintBottom_toTopOf="@+id/login_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtwachtwoord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:password="false"
                        android:singleLine="true"
                        android:text="ZwieberNee!NietStelen"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:text="@string/login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_field" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/grow."
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/login_field"
                    app:layout_constraintStart_toStartOf="@+id/login_field" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="154dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="52dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/biglogo" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/password_field"
                    app:layout_constraintStart_toStartOf="@+id/password_field"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

</layout>
