...
    <string name="button_open">Open</string>
    <string name="button_unpin">unpin</string>
    <string name="request_consultation">Gesprek aanvragen</string>
    <string name="audio">Audio</string>
    <string name="Image">Foto</string>
    <string name="video">Video</string>
    <string name="text">Tekst</string>
    <string name="annuleren">Annuleren</string>
    <string name="aanvraag_gesprek">Gesprek</string>
    <string name="instellingen">Instellingen</string>
    <string name="profiel">Profiel</string>
    <string name="uitloggen">Uitloggen</string>
    <string name="meest_bezocht">Meest Bezocht</string>
    <string name="welkom">Goed je terug te zien!</string>
    <string name="naam">Jane Doe</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="login">Log in</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
...
