...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/img_bulletinboard"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bulletinboard_large"
                        app:layout_constraintBottom_toTopOf="@id/lbl_bulletinboard"
                        app:layout_constraintStart_toStartOf="parent"
...
                        app:layout_constraintBottom_toTopOf="@+id/img_musicRoom"
                        app:layout_constraintEnd_toEndOf="@+id/img_musicRoom"
                        app:layout_constraintStart_toStartOf="@+id/img_musicRoom"
                        app:layout_constraintTop_toBottomOf="@+id/img_musicRoom" />

                    <ImageView
                       android:id="@+id/img_rugzak"
                       android:layout_width="0dp"
                       android:layout_height="200dp"
                       android:contentDescription="@string/backpack"
                       android:scaleType="centerCrop"
                       android:src="@drawable/backpack"
                       app:layout_constraintBottom_toTopOf="@id/lbl_rugzak"
...
